--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Robotics Lab, University of Canberra
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars2.githubusercontent.com/u/30328684?v=4&s=200
 
 #
 # Flags below are optional
