--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Robotics Lab, University of Canberra
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: We love robotics
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/30328684?v=4&s=200
