--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: UCRoboticsLab/ucroboticslab 
+  github: UCRoboticsLab
   instagram:
   linkedin:
   pinterest:
